@@ -1,4 +1,4 @@
-$Id: TODO,v 1.62 2012-02-10 10:45:32 pertusus Exp $
+$Id: TODO,v 1.63 2012-02-26 22:01:47 pertusus Exp $
 This is the todo list for GNU Texinfo.
 If you are interested in working on any of these, email bug-texinfo@gnu.org.
 
@@ -66,7 +66,6 @@ If you are interested in working on any of these, email bug-texinfo@gnu.org.
   - Add support for other Latin 9 (and Latin 2 and Latin 1) characters.
 
 * Makeinfo:
-  - add automatic generation of @node and @menu, and @detailmenu in Top.
   - Improve the HTML customization API.
   - HTML: support thumbnails.
   - HTML: have a library of different CSS styles.
