@@ -1,5 +1,5 @@
 \input texinfo.tex    @c -*-texinfo-*-
-@c $Id: texinfo.txi,v 1.428 2012-02-26 01:45:39 pertusus Exp $
+@c $Id: texinfo.txi,v 1.429 2012-02-26 22:01:47 pertusus Exp $
 @c Ordinarily, Texinfo files have the extension .texi.  But texinfo.texi
 @c clashes with texinfo.tex on 8.3 filesystems, so we use texinfo.txi.
 
@@ -17669,6 +17669,10 @@ Insert nodes for sectioning commands without node.
 Add menu entries or whole menus for nodes associated with sections,
 based on the sectioning tree.
 
+@item regenerate_master_menu
+Regenerate the Top node master menu, replacing the first @code{@@detailmenu}
+in Top node menu or appending at the end of the Top node menu.
+
 @end table
 
 @item USE_ACCESSKEY
@@ -21792,7 +21796,7 @@ Concurrent Versions System}) or RCS (@pxref{Top,, Overview, rcs,
 Revision Control System}) or other version control systems, which
 expand it into a string such as:
 @example
-$Id: texinfo.txi,v 1.428 2012-02-26 01:45:39 pertusus Exp $
+$Id: texinfo.txi,v 1.429 2012-02-26 22:01:47 pertusus Exp $
 @end example
 (This is useful in all sources that use version control, not just manuals.)
 You may wish to include the @samp{$Id:} comment in the @code{@@copying}
