@@ -230,7 +230,7 @@ my %valid_tree_transformations;
 foreach my $valid_transformation ('simple_menus', 
     'fill_gaps_in_sectioning', 'move_index_entries_after_items',
     'insert_nodes_for_sectioning_commands',
-    'complete_tree_nodes_menus') {
+    'complete_tree_nodes_menus', 'regenerate_master_menu') {
   $valid_tree_transformations{$valid_transformation} = 1;
 }
 
